# sapf

./: .editorconfig  .gitignore  README.md  README.txt  flake.nix  meson.build  meson.options  sapf-bif-examples.txt  sapf-examples.txt  sapf-prelude.txt  unit-tests2.txt
.github/scripts/: install-debian-deps.sh  install-macos-deps.sh  install-windows-deps.ps1
.github/workflows/: build.yml
SoundAsPureForm.xcodeproj/: project.pbxproj
include/: AudioToolboxBuffers.hpp  AudioToolboxSoundFile.hpp  DelayUGens.hpp  ErrorCodes.hpp  FilterUGens.hpp  Hash.hpp  MathFuns.hpp  MathOps.hpp  Midi.hpp  MultichannelExpansion.hpp  Object.hpp  Opcode.hpp  OscilUGens.hpp  Parser.hpp  Play.hpp  PortableBuffers.hpp  RCObj.hpp  SndfileSoundFile.hpp  SoundFiles.hpp  Spectrogram.hpp  Types.hpp  UGen.hpp  VM.hpp  clz.hpp  dsp.hpp  elapsedTime.hpp  lock.hpp  makeImage.hpp  primes.hpp  rc_ptr.hpp  rgen.hpp  symbol.hpp
libmanta/: Manta.cpp  MantaUSB.cpp
nix/libdispatch/: default.nix
src/: AudioToolboxBuffers.cpp  AudioToolboxSoundFile.cpp  CoreOps.cpp  DelayUGens.cpp  ErrorCodes.cpp  FilterUGens.cpp  MathFuns.cpp  MathOps.cpp  Midi.cpp  MultichannelExpansion.cpp  Object.cpp  Opcode.cpp  OscilUGens.cpp  Parser.cpp  Play.cpp  PortableBuffers.cpp  RCObj.cpp  RandomOps.cpp  SetOps.cpp  SndfileSoundFile.cpp  SoundFiles.cpp  Spectrogram.cpp  StreamOps.cpp  Types.cpp  UGen.cpp  VM.cpp  dsp.cpp  elapsedTime.cpp  main.cpp  makeImage.cpp  makeImage.mm  primes.cpp  symbol.cpp
