option('accelerate', type : 'boolean', value : false)
option('apple_lock', type : 'boolean', value : false)
option('asan', type : 'boolean', value : false)
option('audiotoolbox', type : 'boolean', value : false)
option('carbon', type : 'boolean', value : false)
option('cocoa', type : 'boolean', value : false)
option('corefoundation', type : 'boolean', value : false)
option('coremidi', type : 'boolean', value : false)
option('mach_time', type : 'boolean', value : false)
option('manta', type : 'boolean', value : false)
